--- a/src/main/resources/templates/suggestionList.html
+++ b/src/main/resources/templates/suggestionList.html
@@ -28,8 +28,11 @@
 
 
 <!--     Fonts and icons     -->
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css' />
+<link
+	href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+	rel="stylesheet" />
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300'
+	rel='stylesheet' type='text/css' />
 <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
 
 </head>
@@ -95,14 +98,35 @@
 			<div class="content">
 				<div class="container-fluid">
 					<div class="row">
+						<div class="bs-example" data-example-id="striped-table">
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th style="width: 5%"></th>
+										<th style="width: 50%">Suggestion</th>
+										<th style="width: 20%">Submit Date</th>
+										<th style="width: 15%">Replied</th>
+										<th style="width: 10%"></th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="suggestion : ${suggestions}">
+										<td ></td>
+										<td th:text="${suggestion.content}"></td>
+										<td th:text="${suggestion.createDate}"></td>
+										<td th:text="${suggestion.status}"></td>
+										<td >Add Comments</td>
+									</tr>
+
+								</tbody>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
 
 
-			<footer class="footer">
-				
-			</footer>
+			<footer class="footer"> </footer>
 
 		</div>
 	</div>
