--- a/src/main/resources/templates/suggestionList.html
+++ b/src/main/resources/templates/suggestionList.html
@@ -109,11 +109,11 @@
 								</thead>
 								<tbody>
 									<tr th:each="suggestion : ${suggestions}">
-										<td ></td>
+										<td></td>
 										<td th:text="${suggestion.content}"></td>
 										<td th:text="${suggestion.createDate}"></td>
 										<td th:text="${suggestion.status}"></td>
-										<td >Add Comments</td>
+										<td>Add Comments</td>
 									</tr>
 
 								</tbody>
@@ -121,7 +121,25 @@
 						</div>
 					</div>
 				</div>
+				<div style="text-align: right;">
+					<nav aria-label="Page navigation">
+						<ul class="pagination">
+							<li th:if='${not page.firstPage}'><a href="#"
+								aria-label="Previous"> </a></li>
+							<li><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#">5</a></li>
+							<li><a href="#" aria-label="Next"> <span
+									aria-hidden="true">&raquo;</span>
+							</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
+
+
 
 
 			<footer class="footer"> </footer>
