--- a/src/main/resources/templates/suggestionList.html
+++ b/src/main/resources/templates/suggestionList.html
@@ -77,7 +77,7 @@
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#">Dashboard</a>
+						<a class="navbar-brand" href="#">Suggestions</a>
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-left">
@@ -97,14 +97,14 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="bs-example" data-example-id="striped-table">
-							<table class="table table-striped">
+							<table class="table ">
 								<thead>
 									<tr>
 										<th style="width: 5%"></th>
 										<th style="width: 50%">Suggestion</th>
 										<th style="width: 20%">Submit Date</th>
-										<th style="width: 15%">Replied</th>
-										<th style="width: 10%"></th>
+										<th style="width: 10%">Replied</th>
+										<th style="width: 15%; text-align: right;"><button type="button" class="btn btn-primary">Add New</button></th>
 									</tr>
 								</thead>
 								<tbody>
@@ -113,7 +113,9 @@
 										<td th:text="${suggestion.content}"></td>
 										<td th:text="${suggestion.createDate}"></td>
 										<td th:text="${suggestion.status}"></td>
-										<td>Add Comments</td>
+										<td style="text-align: right">
+										<button type="button" class="btn btn-primary btn-xs">Reply</button>&nbsp;&nbsp;<button type="button" class="btn btn-primary btn-xs">Delete</button>
+										</td>
 									</tr>
 
 								</tbody>
@@ -124,16 +126,31 @@
 				<div style="text-align: right;">
 					<nav aria-label="Page navigation">
 						<ul class="pagination">
-							<li th:if='${not page.firstPage}'><a href="#"
-								aria-label="Previous"> </a></li>
-							<li><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">5</a></li>
-							<li><a href="#" aria-label="Next"> <span
-									aria-hidden="true">&raquo;</span>
-							</a></li>
+							<li th:class="${page.firstPage}?'disabled':''"><span
+							th:if='${page.firstPage}'>First</span> <a
+							th:if='${not page.firstPage}'
+							th:href='@{${page.url}(page=0,size=${page.size})}'>First</a></li>
+						<li th:class="${page.hasPreviousPage}? '' : 'disabled'"><span
+							th:if='${not page.hasPreviousPage}'>«</span> <a
+							th:if='${page.hasPreviousPage}'
+							th:href='@{${page.url}(page=${page.number-2},size=${page.size})}'
+							title='Go to previous page'>«</a></li>
+						<li th:each='item : ${page.items}'
+							th:class="${item.current}? 'active' : ''"><span
+							th:if='${item.current}' th:text='${item.number}'>1</span> <a
+							th:if='${not item.current}'
+							th:href='@{${page.url}(page=${item.number-1},size=${page.size})}'><span
+								th:text='${item.number}'>1</span></a></li>
+						<li th:class="${page.hasNextPage}? '' : 'disabled'"><span
+							th:if='${not page.hasNextPage}'>»</span> <a
+							th:if='${page.hasNextPage}'
+							th:href='@{${page.url}(page=${page.number},size=${page.size})}'
+							title='Go to next page'>»</a></li>
+						<li th:class="${page.lastPage}? 'disabled' : ''"><span
+							th:if='${page.lastPage}'>Last</span> <a
+							th:if='${not page.lastPage}'
+							th:href='@{${page.url}(page=${page.totalPages - 1},size=${page.size})}'>Last
+								</a></li>
 						</ul>
 					</nav>
 				</div>
