--- a/src/main/resources/templates/suggestionList.html
+++ b/src/main/resources/templates/suggestionList.html
@@ -92,7 +92,38 @@
 				</div>
 			</nav>
 
+			<!-- New Suggestion Model -->
 
+			<div class="modal fade newSuggestionModel" tabindex="-1"
+				role="dialog" aria-labelledby="">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal"
+								aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+							<h4 class="modal-title" id="exampleModalLabel">Create new
+								suggestion</h4>
+						</div>
+						<div class="modal-body">
+							<form id="suggestionForm">
+
+								<div class="form-group">
+									<label for="message-text" class="control-label">Suggestion:</label>
+									<textarea id="txtSuggestion" class="form-control"></textarea>
+								</div>
+							</form>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default"
+								data-dismiss="modal">Close</button>
+							<button type="button" id="btnCreateSuggestion" class="btn btn-primary">Create</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- New Sugegstion Model ends -->
 			<div class="content">
 				<div class="container-fluid">
 					<div class="row">
@@ -104,7 +135,10 @@
 										<th style="width: 50%">Suggestion</th>
 										<th style="width: 20%">Submit Date</th>
 										<th style="width: 10%">Replied</th>
-										<th style="width: 15%; text-align: right;"><button type="button" class="btn btn-primary">Add New</button></th>
+										<th style="width: 15%; text-align: right;"><button
+												type="button" data-toggle="modal"
+												data-target=".newSuggestionModel" class="btn btn-primary">
+												&nbsp;&nbsp;Add New&nbsp;&nbsp;</button></th>
 									</tr>
 								</thead>
 								<tbody>
@@ -114,7 +148,8 @@
 										<td th:text="${suggestion.createDate}"></td>
 										<td th:text="${suggestion.status}"></td>
 										<td style="text-align: right">
-										<button type="button" class="btn btn-primary btn-xs">Reply</button>&nbsp;&nbsp;<button type="button" class="btn btn-primary btn-xs">Delete</button>
+											<button type="button" class="btn btn-primary btn-xs">Reply</button>&nbsp;&nbsp;
+											<button type="button" class="btn btn-primary btn-xs">Delete</button>
 										</td>
 									</tr>
 
@@ -127,30 +162,30 @@
 					<nav aria-label="Page navigation">
 						<ul class="pagination">
 							<li th:class="${page.firstPage}?'disabled':''"><span
-							th:if='${page.firstPage}'>First</span> <a
-							th:if='${not page.firstPage}'
-							th:href='@{${page.url}(page=0,size=${page.size})}'>First</a></li>
-						<li th:class="${page.hasPreviousPage}? '' : 'disabled'"><span
-							th:if='${not page.hasPreviousPage}'>«</span> <a
-							th:if='${page.hasPreviousPage}'
-							th:href='@{${page.url}(page=${page.number-2},size=${page.size})}'
-							title='Go to previous page'>«</a></li>
-						<li th:each='item : ${page.items}'
-							th:class="${item.current}? 'active' : ''"><span
-							th:if='${item.current}' th:text='${item.number}'>1</span> <a
-							th:if='${not item.current}'
-							th:href='@{${page.url}(page=${item.number-1},size=${page.size})}'><span
-								th:text='${item.number}'>1</span></a></li>
-						<li th:class="${page.hasNextPage}? '' : 'disabled'"><span
-							th:if='${not page.hasNextPage}'>»</span> <a
-							th:if='${page.hasNextPage}'
-							th:href='@{${page.url}(page=${page.number},size=${page.size})}'
-							title='Go to next page'>»</a></li>
-						<li th:class="${page.lastPage}? 'disabled' : ''"><span
-							th:if='${page.lastPage}'>Last</span> <a
-							th:if='${not page.lastPage}'
-							th:href='@{${page.url}(page=${page.totalPages - 1},size=${page.size})}'>Last
-								</a></li>
+								th:if='${page.firstPage}'>First</span> <a
+								th:if='${not page.firstPage}'
+								th:href='@{${page.url}(page=0,size=${page.size})}'>First</a></li>
+							<li th:class="${page.hasPreviousPage}? '' : 'disabled'"><span
+								th:if='${not page.hasPreviousPage}'>«</span> <a
+								th:if='${page.hasPreviousPage}'
+								th:href='@{${page.url}(page=${page.number-2},size=${page.size})}'
+								title='Go to previous page'>«</a></li>
+							<li th:each='item : ${page.items}'
+								th:class="${item.current}? 'active' : ''"><span
+								th:if='${item.current}' th:text='${item.number}'>1</span> <a
+								th:if='${not item.current}'
+								th:href='@{${page.url}(page=${item.number-1},size=${page.size})}'><span
+									th:text='${item.number}'>1</span></a></li>
+							<li th:class="${page.hasNextPage}? '' : 'disabled'"><span
+								th:if='${not page.hasNextPage}'>»</span> <a
+								th:if='${page.hasNextPage}'
+								th:href='@{${page.url}(page=${page.number},size=${page.size})}'
+								title='Go to next page'>»</a></li>
+							<li th:class="${page.lastPage}? 'disabled' : ''"><span
+								th:if='${page.lastPage}'>Last</span> <a
+								th:if='${not page.lastPage}'
+								th:href='@{${page.url}(page=${page.totalPages - 1},size=${page.size})}'>Last
+							</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -203,6 +238,23 @@
 		});
 		 */
 
+	});
+
+	// function to submit suggestion form
+	$(function() {
+		$("button#btnCreateSuggestion").click(function() {
+			$.ajax({
+				type : "POST",
+				url : "doCreateSuggestion",
+				data : $('suggestionForm.txtSuggestion').serialize(),
+				success : function(msg) {
+					alert("ok")
+				},
+				error : function() {
+					alert("failure");
+				}
+			});
+		});
 	});
 </script>
 
