--- a/src/main/resources/templates/suggestionList.html
+++ b/src/main/resources/templates/suggestionList.html
@@ -127,7 +127,7 @@
 			</div>
 			<!-- New Sugegstion Modal ends -->
 
-			
+
 			<!-- New Reply Modal -->
 
 			<div class="modal fade" id="addReplyModal" tabindex="-1"
@@ -143,25 +143,24 @@
 						</div>
 						<div class="modal-body">
 							<form id="replyForm">
-								<input type="hidden" id="replySuggestionId" name="replySuggestionId" value="" />
+								<input type="hidden" id="replySuggestionId"
+									name="replySuggestionId" value="" />
 								<div class="form-group">
 									<label for="message-text" class="control-label">Reply:</label>
-									<textarea id="txtReply" name="txtReply"
-										class="form-control"></textarea>
+									<textarea id="txtReply" name="txtReply" class="form-control"></textarea>
 								</div>
 							</form>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default"
 								data-dismiss="modal">Close</button>
-							<button type="button" id="btnCreateReply"
-								class="btn btn-primary">Create</button>
+							<button type="button" id="btnCreateReply" class="btn btn-primary">Create</button>
 						</div>
 					</div>
 				</div>
 			</div>
 			<!-- New Reply Modal ends -->
-			
+
 
 			<!-- Delete suggestion modal -->
 			<div class="modal fade" id="deleteSuggestionModal" tabindex="-1"
@@ -180,12 +179,14 @@
 							<button type="button" id="btnDoDeleteSuggesion"
 								class="btn btn-primary btn-xs">Yes</button>
 							&nbsp;&nbsp;
-							<button type="button" class="btn btn-primary btn-xs" data-dismiss="modal">No</button>
+							<button type="button" class="btn btn-primary btn-xs"
+								data-dismiss="modal">No</button>
 						</div>
 					</div>
 				</div>
 				<form id="deleteSuggestionForm">
-					<input type="hidden" id="deleteSuggestionId" name="deleteSuggestionId" value="" />
+					<input type="hidden" id="deleteSuggestionId"
+						name="deleteSuggestionId" value="" />
 				</form>
 			</div>
 			<!-- Delete suggestion modal ends -->
@@ -201,7 +202,7 @@
 										<th style="width: 5%"></th>
 										<th style="width: 50%">Suggestion</th>
 										<th style="width: 20%">Submit Date</th>
-										<th style="width: 10%">Menager's Reply</th>
+										<th style="width: 10%">Replied?</th>
 										<th style="width: 15%; text-align: right;"><button
 												type="button" data-toggle="modal"
 												data-target=".newSuggestionModel" class="btn btn-primary">
@@ -213,13 +214,14 @@
 										<td></td>
 										<td th:text="${suggestion.content}"></td>
 										<td th:text="${suggestion.createDate}"></td>
-										<td th:text="${suggestion.status}"></td>
+										<td
+											th:utext="${suggestion.hasReply}?'&lt;a tabindex=\'0\' class=\'btn btn-primary btn-xs\' role=\'button\' data-toggle=\'popover\' data-trigger=\'focus\' title=\'Replied at: '+${suggestion.firstReply.createDate}+'\' data-content=\''+${suggestion.firstReply.content}+'\'&gt;show reply&lt;/a&gt;':'NA'">
+										</td>
 										<td style="text-align: right">
-											
-											
-											<button id="btnAddReply"
-												class="btn btn-primary btn-xs" data-toggle="modal"
-												data-target="#addReplyModal"
+
+
+											<button id="btnAddReply" class="btn btn-primary btn-xs"
+												data-toggle="modal" data-target="#addReplyModal"
 												th:attr="data-id=${suggestion.id}">Reply</button>
 											&nbsp;&nbsp;
 											<button id="btnDeleteSuggesion"
@@ -282,7 +284,11 @@
 
 
 
+
 <script type="text/javascript">
+
+	$("[data-toggle=popover]").popover();
+
 	$(document).ready(function() {
 
 		demo.initChartist();
@@ -304,7 +310,7 @@
 			}
 		});
 	});
-	
+
 	$('#replyForm').on('submit', function(e) {
 		e.preventDefault();
 		$.ajax({
@@ -333,27 +339,25 @@
 	$("#btnCreateReply").click(function() {
 		$('#replyForm').submit();
 	});
-	
 
 	$("#deleteSuggestionModal").on("show.bs.modal", function(event) {
 		var button = $(event.relatedTarget); // the delete button
 		var suggestionId = button.data('id')
 		$("#deleteSuggestionId").val(suggestionId);
 	});
-	
+
 	$("#addReplyModal").on("show.bs.modal", function(event) {
 		var button = $(event.relatedTarget); // the delete button
 		var suggestionId = button.data('id')
 		$("#replySuggestionId").val(suggestionId);
 	});
-	
 
 	$('#deleteSuggestionForm').on('submit', function(e) {
-		
+
 		e.preventDefault();
 		$.ajax({
-			url : "doDeleteSuggestion", 
-			type : 'POST', 
+			url : "doDeleteSuggestion",
+			type : 'POST',
 			data : $('#deleteSuggestionForm').serialize(),
 			success : function(data) {
 				$('#deleteSuggestionModal').modal('hide');
