--- a/src/main/resources/templates/suggestionList.html
+++ b/src/main/resources/templates/suggestionList.html
@@ -86,7 +86,7 @@
 
 						<ul class="nav navbar-nav navbar-right">
 
-							<li><a href="#"> Log out </a></li>
+							<li><a href="/doLogout"> Log out </a></li>
 						</ul>
 					</div>
 				</div>
