--- a/src/main/resources/templates/assets/css/light-bootstrap-dashboard.css
+++ b/src/main/resources/templates/assets/css/light-bootstrap-dashboard.css
@@ -458,13 +458,13 @@ body > .navbar-collapse[data-color="red"]:after {
 }
 .sidebar[data-color="purple"]:after,
 body > .navbar-collapse[data-color="purple"]:after {
-  background: #9368E9;
-  background: -moz-linear-gradient(top, #9368E9 0%, #943bea 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9368E9), color-stop(100%, #943bea));
-  background: -webkit-linear-gradient(top, #9368E9 0%, #943bea 100%);
-  background: -o-linear-gradient(top, #9368E9 0%, #943bea 100%);
-  background: -ms-linear-gradient(top, #9368E9 0%, #943bea 100%);
-  background: linear-gradient(to bottom, #9368E9 0%, #943bea 100%);
+  background: #003472;
+  background: -moz-linear-gradient(top, #003472 0%, #943bea 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #003472), color-stop(100%, #943bea));
+  background: -webkit-linear-gradient(top, #003472 0%, #943bea 100%);
+  background: -o-linear-gradient(top, #003472 0%, #943bea 100%);
+  background: -ms-linear-gradient(top, #003472 0%, #943bea 100%);
+  background: linear-gradient(to bottom, #003472 0%, #943bea 100%);
   background-size: 150% 150%;
 }
 
