--- a/src/main/resources/templates/suggestionList.html
+++ b/src/main/resources/templates/suggestionList.html
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/png" href="assets/img/favicon.ico" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-<title></title>
+<title>Dev3</title>
 
 <meta
 	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
@@ -54,15 +54,15 @@
 
 				<ul class="nav">
 					<li class="active"><a href="dashboard.html"> <i
-							class="pe-7s-graph"></i>
-							<p>Dashboard</p>
+							class="pe-7s-note2"></i>
+							<p>Suggestions</p>
 					</a></li>
-					<li><a href="suggestions.html"> <i class="pe-7s-note2"></i>
+					<!-- <li><a href="suggestions.html"> <i class="pe-7s-note2"></i>
 							<p>Suggestions</p>
 					</a></li>
 					<li><a href="profiles.html"> <i class="pe-7s-user"></i>
 							<p>My Profile</p>
-					</a></li>
+					</a></li> -->
 				</ul>
 			</div>
 		</div>
